--- a/Part1/FREDrefs.ipynb
+++ b/Part1/FREDrefs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "173f5a6b-3932-4449-8368-55657c873d93",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "c146e93d-764e-449f-b0d6-3c5ff3e1597b",
    "metadata": {},
    "outputs": [
@@ -29,25 +29,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Series_ID                                            URLS\n",
-      "0         ASCMA        https://fred.stlouisfed.org/series/ASCMA\n",
-      "1         ASFMA        https://fred.stlouisfed.org/series/ASFMA\n",
-      "2         ASHMA        https://fred.stlouisfed.org/series/ASHMA\n",
-      "3        ASMRMA       https://fred.stlouisfed.org/series/ASMRMA\n",
-      "4        ASTDSL       https://fred.stlouisfed.org/series/ASTDSL\n",
-      "5         ASTLL        https://fred.stlouisfed.org/series/ASTLL\n",
-      "6   FBDSILQ027S  https://fred.stlouisfed.org/series/FBDSILQ027S\n",
-      "7           GDP          https://fred.stlouisfed.org/series/GDP\n",
-      "8       GFDEBTN      https://fred.stlouisfed.org/series/GFDEBTN\n",
-      "9        MVLOAS       https://fred.stlouisfed.org/series/MVLOAS\n",
-      "10  NCBDBIQ027S  https://fred.stlouisfed.org/series/NCBDBIQ027S\n",
-      "11        NCBLL        https://fred.stlouisfed.org/series/NCBLL\n",
-      "12        NNBLL        https://fred.stlouisfed.org/series/NNBLL\n",
-      "13    SLGSDODNS    https://fred.stlouisfed.org/series/SLGSDODNS\n",
-      "14        SLOAS        https://fred.stlouisfed.org/series/SLOAS\n",
-      "15      GFDEBTN      https://fred.stlouisfed.org/series/GFDEBTN\n",
-      "16      REVOLSL      https://fred.stlouisfed.org/series/REVOLSL\n",
-      "17      TOTALSL      https://fred.stlouisfed.org/series/TOTALSL\n"
+      "                                                       URLS\n",
+      "Series_ID                                                  \n",
+      "ASCMA              https://fred.stlouisfed.org/series/ASCMA\n",
+      "ASFMA              https://fred.stlouisfed.org/series/ASFMA\n",
+      "ASHMA              https://fred.stlouisfed.org/series/ASHMA\n",
+      "ASMRMA            https://fred.stlouisfed.org/series/ASMRMA\n",
+      "ASTDSL            https://fred.stlouisfed.org/series/ASTDSL\n",
+      "ASTLL              https://fred.stlouisfed.org/series/ASTLL\n",
+      "FBDSILQ027S  https://fred.stlouisfed.org/series/FBDSILQ027S\n",
+      "FBLL                https://fred.stlouisfed.org/series/FBLL\n",
+      "FGDSLAQ027S  https://fred.stlouisfed.org/series/FGDSLAQ027S\n",
+      "GDP                  https://fred.stlouisfed.org/series/GDP\n",
+      "GFDEBTN          https://fred.stlouisfed.org/series/GFDEBTN\n",
+      "MVLOAS            https://fred.stlouisfed.org/series/MVLOAS\n",
+      "NCBDBIQ027S  https://fred.stlouisfed.org/series/NCBDBIQ027S\n",
+      "NCBLL              https://fred.stlouisfed.org/series/NCBLL\n",
+      "NNBLL              https://fred.stlouisfed.org/series/NNBLL\n",
+      "SLGSDODNS      https://fred.stlouisfed.org/series/SLGSDODNS\n",
+      "SLOAS              https://fred.stlouisfed.org/series/SLOAS\n",
+      "GFDEBTN          https://fred.stlouisfed.org/series/GFDEBTN\n",
+      "REVOLSL          https://fred.stlouisfed.org/series/REVOLSL\n",
+      "TOTALSL          https://fred.stlouisfed.org/series/TOTALSL\n"
      ]
     }
    ],
@@ -59,6 +62,8 @@
     "        'https://fred.stlouisfed.org/series/ASTDSL',\n",
     "        'https://fred.stlouisfed.org/series/ASTLL',\n",
     "        'https://fred.stlouisfed.org/series/FBDSILQ027S',\n",
+    "        'https://fred.stlouisfed.org/series/FBLL',\n",
+    "        'https://fred.stlouisfed.org/series/FGDSLAQ027S',\n",
     "        'https://fred.stlouisfed.org/series/GDP',\n",
     "        'https://fred.stlouisfed.org/series/GFDEBTN',\n",
     "        'https://fred.stlouisfed.org/series/MVLOAS',\n",
@@ -85,13 +90,14 @@
     "    'URLS': urls\n",
     "}\n",
     "headersDF = pd.DataFrame(headers)\n",
+    "headersDF.set_index('Series_ID', inplace=True)\n",
     "\n",
     "print(headersDF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "4ec8f391-adbe-4b0b-bd65-abd8216dc111",
    "metadata": {},
    "outputs": [],
