--- a/Part1/debtCalculator.ipynb
+++ b/Part1/debtCalculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "[248 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,24 +226,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'tot_debt' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-3834f8bda838>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdebtion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtotal_us_debt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/PROJECTS/finance/Principles_NavigatingBigDebtCrises/Part1/debtToGDP.py\u001b[0m in \u001b[0;36mtotal_us_debt\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mtot_loans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate_range\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ASTLL'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0mtot_d_securities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate_range\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ASTDSL'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mtot_debt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtot_loans\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtot_d_securities\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'outer'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0mtot_debt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Total_Debt'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtot_debt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tot_loans'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtot_debt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tot_d_securities'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtot_debt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'tot_debt' referenced before assignment"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ASTLL</th>\n",
+       "      <th>ASTDSL</th>\n",
+       "      <th>Total_Debt</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1960-01-01</th>\n",
+       "      <td>349880.0</td>\n",
+       "      <td>413378.0</td>\n",
+       "      <td>763258.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-04-01</th>\n",
+       "      <td>360974.0</td>\n",
+       "      <td>415230.0</td>\n",
+       "      <td>776204.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-07-01</th>\n",
+       "      <td>366810.0</td>\n",
+       "      <td>420184.0</td>\n",
+       "      <td>786994.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-10-01</th>\n",
+       "      <td>376713.0</td>\n",
+       "      <td>426176.0</td>\n",
+       "      <td>802889.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-01</th>\n",
+       "      <td>376828.0</td>\n",
+       "      <td>426841.0</td>\n",
+       "      <td>803669.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>29921572.0</td>\n",
+       "      <td>53108991.0</td>\n",
+       "      <td>83030563.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>30317768.0</td>\n",
+       "      <td>53804076.0</td>\n",
+       "      <td>84121844.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>30756356.0</td>\n",
+       "      <td>54574168.0</td>\n",
+       "      <td>85330524.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>31414420.0</td>\n",
+       "      <td>54912165.0</td>\n",
+       "      <td>86326585.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-01</th>\n",
+       "      <td>32120663.0</td>\n",
+       "      <td>56187773.0</td>\n",
+       "      <td>88308436.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>248 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ASTLL      ASTDSL  Total_Debt\n",
+       "DATE                                          \n",
+       "1960-01-01    349880.0    413378.0    763258.0\n",
+       "1960-04-01    360974.0    415230.0    776204.0\n",
+       "1960-07-01    366810.0    420184.0    786994.0\n",
+       "1960-10-01    376713.0    426176.0    802889.0\n",
+       "1961-01-01    376828.0    426841.0    803669.0\n",
+       "...                ...         ...         ...\n",
+       "2020-10-01  29921572.0  53108991.0  83030563.0\n",
+       "2021-01-01  30317768.0  53804076.0  84121844.0\n",
+       "2021-04-01  30756356.0  54574168.0  85330524.0\n",
+       "2021-07-01  31414420.0  54912165.0  86326585.0\n",
+       "2021-10-01  32120663.0  56187773.0  88308436.0\n",
+       "\n",
+       "[248 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "debtion.total_us_debt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FGDSLAQ027S</th>\n",
+       "      <th>SLGSDODNS</th>\n",
+       "      <th>debt_sum</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1960-01-01</th>\n",
+       "      <td>246581.0</td>\n",
+       "      <td>68172.0</td>\n",
+       "      <td>314753.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-04-01</th>\n",
+       "      <td>244884.0</td>\n",
+       "      <td>69588.0</td>\n",
+       "      <td>314472.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-07-01</th>\n",
+       "      <td>246289.0</td>\n",
+       "      <td>70980.0</td>\n",
+       "      <td>317269.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-10-01</th>\n",
+       "      <td>248820.0</td>\n",
+       "      <td>72211.0</td>\n",
+       "      <td>321031.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-01-01</th>\n",
+       "      <td>246835.0</td>\n",
+       "      <td>73606.0</td>\n",
+       "      <td>320441.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>23621060.0</td>\n",
+       "      <td>3210373.0</td>\n",
+       "      <td>26831433.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>23962809.0</td>\n",
+       "      <td>3237779.0</td>\n",
+       "      <td>27200588.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>24321359.0</td>\n",
+       "      <td>3263527.0</td>\n",
+       "      <td>27584886.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>24269411.0</td>\n",
+       "      <td>3278662.0</td>\n",
+       "      <td>27548073.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-01</th>\n",
+       "      <td>25304484.0</td>\n",
+       "      <td>3271343.0</td>\n",
+       "      <td>28575827.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>248 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            FGDSLAQ027S  SLGSDODNS    debt_sum\n",
+       "DATE                                          \n",
+       "1960-01-01     246581.0    68172.0    314753.0\n",
+       "1960-04-01     244884.0    69588.0    314472.0\n",
+       "1960-07-01     246289.0    70980.0    317269.0\n",
+       "1960-10-01     248820.0    72211.0    321031.0\n",
+       "1961-01-01     246835.0    73606.0    320441.0\n",
+       "...                 ...        ...         ...\n",
+       "2020-10-01   23621060.0  3210373.0  26831433.0\n",
+       "2021-01-01   23962809.0  3237779.0  27200588.0\n",
+       "2021-04-01   24321359.0  3263527.0  27584886.0\n",
+       "2021-07-01   24269411.0  3278662.0  27548073.0\n",
+       "2021-10-01   25304484.0  3271343.0  28575827.0\n",
+       "\n",
+       "[248 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "debtion.total_gov_debt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DEBT' object has no attribute 'usDebt_to_gdp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-b777e41a25fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdebtion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musDebt_to_gdp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DEBT' object has no attribute 'usDebt_to_gdp'"
+     ]
+    }
+   ],
+   "source": [
+    "debtion.usDebt_to_gdp()"
    ]
   },
   {
