--- a/Part1/usDebt_to_GDP.ipynb
+++ b/Part1/usDebt_to_GDP.ipynb
@@ -440,8 +440,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "08a0dfaf3fa74e1b9a1bb705dbe1b2708914f992320bdd77350db063c3b717dd"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
